05 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/.env.example:
 * backend/clarin/app/Http/Controllers/DocumentController.php: Added execution
 of handlers (for the time being through a call to an external, django-based
 service).
   Backend (Laravel) upgraded to 8.x.

04 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/DocumentController.php:
 * backend/clarin/app/Models/Document.php:
 * backend/clarin/database/migrations/2021_04_27_112120_add_document_fields.php:
 * frontend/clarin/js/controllers/addCollectionCtrl.js:
 * frontend/clarin/js/directives/uploader-directive.js:
 * frontend/clarin/js/services/documentService.js:
 * frontend/clarin/templates/collection-add.html:
 * frontend/clarin/templates/directives/uploader.html: Added support for
 uploading XML files. Also, during collection creation, the user can specify a
 document type, and a document handler. Two handlers are currently supported,
 "None" and "TEI XML".

27 April 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/vendor/composer/autoload_classmap.php:
 * backend/clarin/vendor/composer/autoload_static.php: Added backend migration
 (new Document fields) for importing document types beyond text.

19 April 2021 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/directives/annotator-widget.js:
 * frontend/clarin/js/directives/button/annotation-button.js:
 * frontend/clarin/templates/annotation.html: Added support for predefined
 line breaks in Button Annotator labels. Also reduced paddings to 1px.

10 April 2021 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/app.js:
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/templates/annotation.html:
 * frontend/clarin/templates/directives/toolbar.html: Added the ability to
 select a router for links.
